--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,8 @@ jobs:
   print:
     runs-on: ubuntu-latest
     steps:
+      - name: Get repository code
+        uses: actions/checkout@v3
+        
       - name: Print context
         run: echo "${{ toJSON(github.event) }}"
