--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Print context
-        run: echo "${{ toJSON(github.event) }}"
+        run: echo "${{ toJSON(github.event.commits) }}"
