--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Print context
-        run: echo "${{ toJSON(github.event) }}"
+        run: echo "${{ toJSON(github.event.commits[0]) }}"
     
