--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types:
+      - closed
 
 
 jobs:
@@ -12,6 +15,16 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v3
         
+  show_info:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v3
+
       - name: Print context
-        run: echo "${{ toJSON(github.event.pull_request) }}"
+        run: echo "${{ toJSON(github.event) }}"
+      
+  
+        
     
