--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+        
       - uses: 8BitJonny/gh-get-current-pr@2.2.0
         id: PR
-
-      - run: echo "${{ steps.PR.outputs }} Your PR title is ${{ steps.PR.outputs.title }} and its user login is ${{ steps.PR.outputs.user.login}}  and merged_at ${{steps.PR.outputs.merged_at}} and description is ${{steps.PR.outputs.description}} and its JSON is ${{ steps.PR.outputs.pr }}"       
+      - run: echo "Your PR title is ${{ steps.PR.outputs.pr_title }} and its user login is ${{ steps.PR.outputs.pr_user}}  and merged_at ${{steps.PR.outputs.pr_merged_at}} and description is ${{steps.PR.outputs.pr_description}} and its JSON is ${{ steps.PR.outputs.pr }}"
