--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
             echo "JSON is ${{ steps.PR.outputs.pr }}"
             cd .github/workflows
             chmod +x ./test.sh
-            ./test.sh PR_TITLE=${{ steps.PR.outputs.pr_title }} REPOSITORY_NAME=${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}} DETAILS=${{fromJSON(steps.PR.outputs.pr).body}} DEVELOPER_LOGIN=${{ fromJSON(steps.PR.outputs.pr).user.login}}
+            ./test.sh PR_TITLE="${{ steps.PR.outputs.pr_title }}" REPOSITORY_NAME="${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}}" DETAILS="${{fromJSON(steps.PR.outputs.pr).body}}" DEVELOPER_LOGIN="${{ fromJSON(steps.PR.outputs.pr).user.login}}"
