--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - run: |
             cd .github/workflows
             chmod +x ./test.sh
-            ./test.sh PR_TITLE="${{ steps.PR.outputs.pr_title }}" REPOSITORY_NAME="${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}}" DETAILS="${{fromJSON(steps.PR.outputs.pr).body}}" DEVELOPER_LOGIN="${{ fromJSON(steps.PR.outputs.pr).user.login}}"
+            ./test.sh PR_LINK="${{ steps.PR.outputs.pr_url }}" PR_TITLE="${{ steps.PR.outputs.pr_title }}" REPOSITORY_NAME="${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}}" DETAILS="${{ steps.PR.outputs.pr_body}}" DEVELOPER_LOGIN="${{ fromJSON(steps.PR.outputs.pr).user.login}}"
