--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ jobs:
       - uses: 8BitJonny/gh-get-current-pr@2.2.0
         id: PR
       - run: |
-            cd .github/workflows
-            chmod +x ./update_notifier.sh
-            ./update_notifier.sh BOT_API_KEY=${{ secrets.TG_TOKEN }} CHAT_ID=${{ secrets.DD_SUPPORT_TG_CHAT_ID }} PR_TITLE="${{ steps.PR.outputs.pr_title }}" REPOSITORY_NAME="${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}}" DETAILS="${{ steps.PR.outputs.pr_body}}" DEVELOPER_LOGIN="${{ fromJSON(steps.PR.outputs.pr).user.login}}"
+            sudo chmod +x .github/workflows/update_notifier.sh
+            .github/workflows/update_notifier.sh BOT_API_KEY=${{ secrets.TG_TOKEN }} CHAT_ID=${{ secrets.DD_SUPPORT_TG_CHAT_ID }} PR_TITLE="${{ steps.PR.outputs.pr_title }}" REPOSITORY_NAME="${{fromJSON(steps.PR.outputs.pr).head.repo.full_name}}" DETAILS="${{ steps.PR.outputs.pr_body}}" DEVELOPER_LOGIN="${{ fromJSON(steps.PR.outputs.pr).user.login}}"
 
